cmake_minimum_required(VERSION 3.12)
project(Libfabric_Benchmark)

set(CMAKE_CXX_STANDARD 14)

include_directories(CBM_Benchmark)
include_directories(CBM_Benchmark/lib)
include_directories(CBM_Benchmark/rdma)

add_executable(Libfabric_Benchmark
        CBM_Benchmark/lib/libfabric/libfabric/libfabric.tlog/CL.command.1.tlog
        CBM_Benchmark/lib/libfabric/libfabric/libfabric.tlog/CL.read.1.tlog
        CBM_Benchmark/lib/libfabric/libfabric/libfabric.tlog/CL.write.1.tlog
        CBM_Benchmark/lib/libfabric/libfabric/libfabric.tlog/libfabric.lastbuildstate
        CBM_Benchmark/lib/libfabric/libfabric/libfabric.tlog/libfabric.write.1u.tlog
        CBM_Benchmark/lib/libfabric/libfabric/libfabric.tlog/link.command.1.tlog
        CBM_Benchmark/lib/libfabric/libfabric/libfabric.tlog/link.read.1.tlog
        CBM_Benchmark/lib/libfabric/libfabric/libfabric.tlog/link.write.1.tlog
        CBM_Benchmark/lib/libfabric/libfabric/common.obj
        CBM_Benchmark/lib/libfabric/libfabric/enosys.obj
        CBM_Benchmark/lib/libfabric/libfabric/fabric.obj
        CBM_Benchmark/lib/libfabric/libfabric/fasthash.obj
        CBM_Benchmark/lib/libfabric/libfabric/fi_tostr.obj
        CBM_Benchmark/lib/libfabric/libfabric/hook.obj
        CBM_Benchmark/lib/libfabric/libfabric/hook_av.obj
        CBM_Benchmark/lib/libfabric/libfabric/hook_cm.obj
        CBM_Benchmark/lib/libfabric/libfabric/hook_cntr.obj
        CBM_Benchmark/lib/libfabric/libfabric/hook_cq.obj
        CBM_Benchmark/lib/libfabric/libfabric/hook_domain.obj
        CBM_Benchmark/lib/libfabric/libfabric/hook_ep.obj
        CBM_Benchmark/lib/libfabric/libfabric/hook_eq.obj
        CBM_Benchmark/lib/libfabric/libfabric/hook_perf.obj
        CBM_Benchmark/lib/libfabric/libfabric/hook_wait.obj
        CBM_Benchmark/lib/libfabric/libfabric/hook_xfer.obj
        CBM_Benchmark/lib/libfabric/libfabric/indexer.obj
        CBM_Benchmark/lib/libfabric/libfabric/iov.obj
        CBM_Benchmark/lib/libfabric/libfabric/libfabric.log
        CBM_Benchmark/lib/libfabric/libfabric/log.obj
        CBM_Benchmark/lib/libfabric/libfabric/mem.obj
        CBM_Benchmark/lib/libfabric/libfabric/netdir_addr.obj
        CBM_Benchmark/lib/libfabric/libfabric/netdir_cntr.obj
        CBM_Benchmark/lib/libfabric/libfabric/netdir_cq.obj
        CBM_Benchmark/lib/libfabric/libfabric/netdir_domain.obj
        CBM_Benchmark/lib/libfabric/libfabric/netdir_ep.obj
        CBM_Benchmark/lib/libfabric/libfabric/netdir_ep_msg.obj
        CBM_Benchmark/lib/libfabric/libfabric/netdir_ep_rma.obj
        CBM_Benchmark/lib/libfabric/libfabric/netdir_ep_srx.obj
        CBM_Benchmark/lib/libfabric/libfabric/netdir_eq.obj
        CBM_Benchmark/lib/libfabric/libfabric/netdir_fabric.obj
        CBM_Benchmark/lib/libfabric/libfabric/netdir_fs.obj
        CBM_Benchmark/lib/libfabric/libfabric/netdir_init.obj
        CBM_Benchmark/lib/libfabric/libfabric/netdir_mr.obj
        CBM_Benchmark/lib/libfabric/libfabric/netdir_ndinit.obj
        CBM_Benchmark/lib/libfabric/libfabric/netdir_ov.obj
        CBM_Benchmark/lib/libfabric/libfabric/netdir_pep.obj
        CBM_Benchmark/lib/libfabric/libfabric/netdir_unexp.obj
        CBM_Benchmark/lib/libfabric/libfabric/osd.obj
        CBM_Benchmark/lib/libfabric/libfabric/perf.obj
        CBM_Benchmark/lib/libfabric/libfabric/rbtree.obj
        CBM_Benchmark/lib/libfabric/libfabric/rxd_attr.obj
        CBM_Benchmark/lib/libfabric/libfabric/rxd_av.obj
        CBM_Benchmark/lib/libfabric/libfabric/rxd_cntr.obj
        CBM_Benchmark/lib/libfabric/libfabric/rxd_cq.obj
        CBM_Benchmark/lib/libfabric/libfabric/rxd_domain.obj
        CBM_Benchmark/lib/libfabric/libfabric/rxd_ep.obj
        CBM_Benchmark/lib/libfabric/libfabric/rxd_fabric.obj
        CBM_Benchmark/lib/libfabric/libfabric/rxd_init.obj
        CBM_Benchmark/lib/libfabric/libfabric/rxm_attr.obj
        CBM_Benchmark/lib/libfabric/libfabric/rxm_conn.obj
        CBM_Benchmark/lib/libfabric/libfabric/rxm_cq.obj
        CBM_Benchmark/lib/libfabric/libfabric/rxm_domain.obj
        CBM_Benchmark/lib/libfabric/libfabric/rxm_ep.obj
        CBM_Benchmark/lib/libfabric/libfabric/rxm_fabric.obj
        CBM_Benchmark/lib/libfabric/libfabric/rxm_init.obj
        CBM_Benchmark/lib/libfabric/libfabric/rxm_rma.obj
        CBM_Benchmark/lib/libfabric/libfabric/sock_atomic.obj
        CBM_Benchmark/lib/libfabric/libfabric/sock_av.obj
        CBM_Benchmark/lib/libfabric/libfabric/sock_cntr.obj
        CBM_Benchmark/lib/libfabric/libfabric/sock_comm.obj
        CBM_Benchmark/lib/libfabric/libfabric/sock_conn.obj
        CBM_Benchmark/lib/libfabric/libfabric/sock_cq.obj
        CBM_Benchmark/lib/libfabric/libfabric/sock_ctx.obj
        CBM_Benchmark/lib/libfabric/libfabric/sock_dom.obj
        CBM_Benchmark/lib/libfabric/libfabric/sock_ep.obj
        CBM_Benchmark/lib/libfabric/libfabric/sock_ep_dgram.obj
        CBM_Benchmark/lib/libfabric/libfabric/sock_ep_msg.obj
        CBM_Benchmark/lib/libfabric/libfabric/sock_ep_rdm.obj
        CBM_Benchmark/lib/libfabric/libfabric/sock_eq.obj
        CBM_Benchmark/lib/libfabric/libfabric/sock_fabric.obj
        CBM_Benchmark/lib/libfabric/libfabric/sock_mr.obj
        CBM_Benchmark/lib/libfabric/libfabric/sock_msg.obj
        CBM_Benchmark/lib/libfabric/libfabric/sock_poll.obj
        CBM_Benchmark/lib/libfabric/libfabric/sock_progress.obj
        CBM_Benchmark/lib/libfabric/libfabric/sock_rma.obj
        CBM_Benchmark/lib/libfabric/libfabric/sock_rx_entry.obj
        CBM_Benchmark/lib/libfabric/libfabric/sock_trigger.obj
        CBM_Benchmark/lib/libfabric/libfabric/sock_wait.obj
        CBM_Benchmark/lib/libfabric/libfabric/tcpx_attr.obj
        CBM_Benchmark/lib/libfabric/libfabric/tcpx_comm.obj
        CBM_Benchmark/lib/libfabric/libfabric/tcpx_conn_mgr.obj
        CBM_Benchmark/lib/libfabric/libfabric/tcpx_cq.obj
        CBM_Benchmark/lib/libfabric/libfabric/tcpx_domain.obj
        CBM_Benchmark/lib/libfabric/libfabric/tcpx_ep.obj
        CBM_Benchmark/lib/libfabric/libfabric/tcpx_eq.obj
        CBM_Benchmark/lib/libfabric/libfabric/tcpx_fabric.obj
        CBM_Benchmark/lib/libfabric/libfabric/tcpx_init.obj
        CBM_Benchmark/lib/libfabric/libfabric/tcpx_progress.obj
        CBM_Benchmark/lib/libfabric/libfabric/tcpx_rma.obj
        CBM_Benchmark/lib/libfabric/libfabric/tree.obj
        CBM_Benchmark/lib/libfabric/libfabric/udpx_attr.obj
        CBM_Benchmark/lib/libfabric/libfabric/udpx_cq.obj
        CBM_Benchmark/lib/libfabric/libfabric/udpx_domain.obj
        CBM_Benchmark/lib/libfabric/libfabric/udpx_ep.obj
        CBM_Benchmark/lib/libfabric/libfabric/udpx_fabric.obj
        CBM_Benchmark/lib/libfabric/libfabric/udpx_init.obj
        CBM_Benchmark/lib/libfabric/libfabric/util_atomic.obj
        CBM_Benchmark/lib/libfabric/libfabric/util_attr.obj
        CBM_Benchmark/lib/libfabric/libfabric/util_av.obj
        CBM_Benchmark/lib/libfabric/libfabric/util_buf.obj
        CBM_Benchmark/lib/libfabric/libfabric/util_cntr.obj
        CBM_Benchmark/lib/libfabric/libfabric/util_cq.obj
        CBM_Benchmark/lib/libfabric/libfabric/util_domain.obj
        CBM_Benchmark/lib/libfabric/libfabric/util_ep.obj
        CBM_Benchmark/lib/libfabric/libfabric/util_eq.obj
        CBM_Benchmark/lib/libfabric/libfabric/util_fabric.obj
        CBM_Benchmark/lib/libfabric/libfabric/util_main.obj
        CBM_Benchmark/lib/libfabric/libfabric/util_mem_monitor.obj
        CBM_Benchmark/lib/libfabric/libfabric/util_mr_map.obj
        CBM_Benchmark/lib/libfabric/libfabric/util_ns.obj
        CBM_Benchmark/lib/libfabric/libfabric/util_pep.obj
        CBM_Benchmark/lib/libfabric/libfabric/util_poll.obj
        CBM_Benchmark/lib/libfabric/libfabric/util_wait.obj
        CBM_Benchmark/lib/libfabric/libfabric/var.obj
        CBM_Benchmark/lib/libfabric/libfabric/vc141.pdb
        CBM_Benchmark/lib/libfabric/libfabric.dll
        CBM_Benchmark/lib/libfabric/libfabric.exp
        CBM_Benchmark/lib/libfabric/libfabric.iobj
        CBM_Benchmark/lib/libfabric/libfabric.ipdb
        CBM_Benchmark/lib/libfabric/libfabric.lib
        CBM_Benchmark/lib/libfabric/libfabric.pdb
        CBM_Benchmark/rdma/fabric.h
        CBM_Benchmark/rdma/fi_atomic.h
        CBM_Benchmark/rdma/fi_cm.h
        CBM_Benchmark/rdma/fi_domain.h
        CBM_Benchmark/rdma/fi_endpoint.h
        CBM_Benchmark/rdma/fi_eq.h
        CBM_Benchmark/rdma/fi_errno.h
        CBM_Benchmark/rdma/fi_rma.h
        CBM_Benchmark/rdma/fi_tagged.h
        CBM_Benchmark/rdma/fi_trigger.h
        CBM_Benchmark/Config.cpp
        CBM_Benchmark/Config.h
        CBM_Benchmark/Domain.cpp
        CBM_Benchmark/Domain.h
        CBM_Benchmark/Endpoint.cpp
        CBM_Benchmark/Endpoint.h
        CBM_Benchmark/InputNode.cpp
        CBM_Benchmark/InputNode.h
        CBM_Benchmark/Main.cpp
        CBM_Benchmark/Node.cpp
        CBM_Benchmark/Node.h
        CBM_Benchmark/ProcessingNode.cpp
        CBM_Benchmark/ProcessingNode.h
        CBM_Benchmark/resource.h
        CBM_Benchmark/Source.cpp CBM_Benchmark/host2ip.cpp CBM_Benchmark/host2ip.h)
